# text-editor-raylib-C-

./: .gitignore  CMakeLists.txt  README.md  test.txt
include/: cursor.h  text_engine.h  window_utils.h
src/: cursor.cpp  main.cpp  text_engine.cpp
